ID:6257 Fix page jumping when selecting user in TasksAPI

--- a/dev/sass/no-flat/_select2.scss
+++ b/dev/sass/no-flat/_select2.scss
@@ -17,6 +17,9 @@
         .select2-selection__arrow {
             right: 9px;
         }
+        .select2-selection__rendered {
+            line-height: 28px;
+        }
     }
     .select2-selection--multiple {
         min-height: initial;
